--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,22 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="ButtonText">
+		    <item name="android:textColor">#ffffff</item>
+		    <item name="android:gravity">center</item>
+		    <item name="android:textSize">20sp</item>
+		    <item name="android:shadowColor">#000000</item>
+		    <item name="android:shadowDx">1</item>
+		    <item name="android:shadowDy">1</item>
+		    <item name="android:shadowRadius">2</item>
+	</style>
+	<style name="textStyle">
+            <item name="android:gravity">center_vertical|center_horizontal</item>
+            <item name="android:paddingLeft">5dip</item>
+            <item name="android:paddingRight">5dip</item>
+            <item name="android:textStyle">bold</item>
+            <item name="android:textSize">22sp</item>
+            <item name="android:textColor">#000000</item>
+	</style>
+	
 </resources>
